# templates-projects-boilerplates

python/: Makefile  README.md  logging.yml.example  pyproject.toml
python-simple-pip/: .gitignore  README.md  logging.yml.example  pyproject.toml
python-simple-pip/myproject/: config.py  main.py
python/changeme/: config.py  main.py  model.py
python/myproject/: model.py
